--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
   },
   "homepage": "https://github.com/ArkeselDev/express-ussd-sample#readme",
   "dependencies": {
-    "axios": "^0.27.2",
-    "body-parser": "^1.19.0",
+    "axios": "^1.11.0",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "express": "^4.17.3",
-    "memory-cache": "^0.2.0"
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "memory-cache": "^0.2.0",
+    "mongoose": "^8.18.0"
   }
 }
