--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "express-ussd-sample",
+  "name": "courier-ussd",
   "type": "module",
   "version": "1.0.0",
   "description": "Sample USSD app Code using Arkesel's USSD Platform",
   "main": "app.js",
   "scripts": {
+    "serve": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -31,6 +32,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "memory-cache": "^0.2.0",
     "mongoose": "^8.18.0"
   }
