--- a/package.json
+++ b/package.json
@@ -27,13 +27,17 @@
   },
   "homepage": "https://github.com/ArkeselDev/express-ussd-sample#readme",
   "dependencies": {
+    "@react-email/components": "^0.5.5",
+    "@react-email/render": "^1.3.1",
     "axios": "^1.11.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "bcryptjs": "^2.4.3",
     "memory-cache": "^0.2.0",
-    "mongoose": "^8.18.0"
+    "mongoose": "^8.18.0",
+    "nodemailer": "^7.0.6",
+    "react": "^19.1.1"
   }
 }
